<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".MapsActivity"
    tools:openDrawer="start"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="80dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#000"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <RelativeLayout
                android:layout_width="255dp"
                android:layout_height="153dp"
                android:layout_gravity="center_horizontal"
                android:background="#fff"
                android:id="@+id/maps_relative"
                >

                <EditText
                    android:id="@+id/editTextFrom"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/editTextTo"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:hint="@string/where_are_you_getting_picked_up"
                    android:inputType="textPostalAddress"
                    android:selectAllOnFocus="false" />

                <EditText
                    android:id="@+id/editTextTo"
                    android:layout_width="267dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ems="10"
                    android:hint="@string/where_do_you_want_to_go"
                    android:inputType="textPostalAddress" />


                <Button
                    android:id="@+id/sendButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="#000"
                    android:textColor="#fff"
                    android:text="@string/search"
                    tools:text="Search" />

                <Button
                    android:id="@+id/sendLocationsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:background="#000"
                    android:textColor="#fff"
                    android:text="@string/send" />

            </RelativeLayout>


        </FrameLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"

    />

</android.support.v4.widget.DrawerLayout>




